# DDNS

./: .env  .env.example  Cargo.toml  DEPLOY_NOW.txt  DESIGN.md  DNS-SETUP.md  LINUX_DEPLOY.md  MULTI_HOSTNAME.md  Makefile  README.md  ROUTER_FIX.md  build.sh  ddns-server.service  deploy-router-fix.sh  install.sh  migrate_db.sql  schema.sql  test-ddns-fix.sh  test-dns.sh
nginx/: README.md  ash-api.online-http-only.conf  ash-api.online.conf  check-status.sh  setup-nginx.sh
src/: db.rs  dns_server.rs  handlers.rs  main.rs  models.rs
templates/: dashboard.html  login.html  retro.css
